Changed some visualization stuff, still tinkering with testing things

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Visualization Test</title>
+    <title>Graph Visualization</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
     <svg width="500" height="500" >
-        <ellipse cx="100" cy="50" rx="75" ry="50" fill="grey"></rect>
+        <ellipse cx="100" cy="50" rx="75" ry="50" fill="grey"></ellipse>
     </svg>
-    <script src="/visualization.js"></script>
+    <!-- <script src="/visualization.js"></script> -->
 </body>
 </html>
