Test code now functions and now outputs a cool graph! Can use the same template

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <svg width="500" height="500" >
         <ellipse cx="100" cy="50" rx="75" ry="50" fill="grey"></ellipse>
     </svg>
-    <!-- <script src="/visualization.js"></script> -->
+    <div id="graph_vis"></div>
+    <script src="/graphvis.js"></script>
 </body>
 </html>
