--- a/d3Test/test.html
+++ b/d3Test/test.html
@@ -28,7 +28,7 @@ var simulation = d3.forceSimulation()
     .force("charge", d3.forceManyBody())
     .force("center", d3.forceCenter(width / 2, height / 2));
 
-d3.json("miserables.json", function(error, graph) {
+d3.json("model.json", function(error, graph) {
   if (error) throw error;
 
   var link = svg.append("g")
@@ -36,19 +36,26 @@ d3.json("miserables.json", function(error, graph) {
     .selectAll("line")
     .data(graph.links)
     .enter().append("line")
-      .attr("stroke-width", function(d) { return Math.sqrt(d.value); });
+      .attr("stroke-width", function(d) { return 10; });
 
   var node = svg.append("g")
       .attr("class", "nodes")
     .selectAll("circle")
     .data(graph.nodes)
     .enter().append("circle")
+    .on("dblclick", function(d) { alert( d.id + " node was double clicked."); })
       .attr("r", 5)
       .attr("fill", function(d) { return color(d.group); })
       .call(d3.drag()
           .on("start", dragstarted)
           .on("drag", dragged)
           .on("end", dragended));
+    
+    var lables = node.append("text")
+        .data(graph.nodes)
+        .text(function(d) { return d.id; })
+        .attr('x', 6)
+        .attr('y', 3);
 
   node.append("title")
       .text(function(d) { return d.id; });
