--- a/d3Test/test.html
+++ b/d3Test/test.html
@@ -12,8 +12,13 @@
   stroke-width: 1.5px;
 }
 
+text {
+  font-family: sans-serif;
+  font-size: 10px;
+}
+
 </style>
-<svg width="960" height="600"></svg>
+<svg width="960" height="800"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
@@ -21,12 +26,38 @@ var svg = d3.select("svg"),
     width = +svg.attr("width"),
     height = +svg.attr("height");
 
+svg.append('defs').append('marker')
+  .attr('id', 'arrowhead')
+  .attr('viewBox', '-0 -5 10 10')
+  .attr('refX', 13)
+  .attr('refY', 0)
+  .attr('orient', 'auto')
+  .attr('markerWidth', 10)
+  .attr('markerHeight', 10)
+  .attr('xoverflow', 'visible')
+  .append('svg:path')
+  .attr('d', 'M 0,-5 L 10 ,0 L 0,5')
+  .attr('fill', '#999')
+  .style('stroke','none');
+
 var color = d3.scaleOrdinal(d3.schemeCategory20);
 
+var g = svg.append("g")
+  .attr("class", "everything");
+  
 var simulation = d3.forceSimulation()
     .force("link", d3.forceLink().id(function(d) { return d.id; }))
-    .force("charge", d3.forceManyBody())
+    .force("charge", d3.forceManyBody().strength(-25))
+    .force('y', d3.forceY().y(function(d) { return d.id / 4; }))
+    // .force('x', d3.forceX().x(function(d) { return d.id % 100; }))
+    // .force('x', d3.forceX().x(function(d) { return (d.id*16) % 800; }))
     .force("center", d3.forceCenter(width / 2, height / 2));
+
+    //add zoom capabilities 
+var zoom_handler = d3.zoom()
+  .on("zoom", zoom_actions);
+
+zoom_handler(svg);
 
 d3.json("model.json", function(error, graph) {
   if (error) throw error;
@@ -36,26 +67,33 @@ d3.json("model.json", function(error, graph) {
     .selectAll("line")
     .data(graph.links)
     .enter().append("line")
-      .attr("stroke-width", function(d) { return 10; });
+    .attr("stroke-width", function(d) { return Math.sqrt(d.value); })
+    .attr('marker-end', 'url(#arrowhead)');
 
   var node = svg.append("g")
       .attr("class", "nodes")
-    .selectAll("circle")
+    .selectAll("g")
     .data(graph.nodes)
-    .enter().append("circle")
-    .on("dblclick", function(d) { alert( d.id + " node was double clicked."); })
-      .attr("r", 5)
-      .attr("fill", function(d) { return color(d.group); })
-      .call(d3.drag()
-          .on("start", dragstarted)
-          .on("drag", dragged)
-          .on("end", dragended));
-    
-    var lables = node.append("text")
-        .data(graph.nodes)
-        .text(function(d) { return d.id; })
-        .attr('x', 6)
-        .attr('y', 3);
+    .enter().append("g")
+
+  var circles = node.append("circle")
+    .attr("r", 5)
+    .attr("fill", function(d) { return color(d.group); });
+
+  // Create a drag handler and append it to the node object instead
+  // var drag_handler = d3.drag()
+  //     .on("start", dragstarted)
+  //     .on("drag", dragged)
+  //     .on("end", dragended);
+
+  // drag_handler(node);
+  
+  var labels = node.append("text")
+      .text(function(d) {
+        return d.id;
+      })
+      .attr('x', 6)
+      .attr('y', 3);
 
   node.append("title")
       .text(function(d) { return d.id; });
@@ -75,8 +113,9 @@ d3.json("model.json", function(error, graph) {
         .attr("y2", function(d) { return d.target.y; });
 
     node
-        .attr("cx", function(d) { return d.x; })
-        .attr("cy", function(d) { return d.y; });
+        .attr("transform", function(d) {
+          return "translate(" + d.x + "," + d.y + ")";
+        })
   }
 });
 
@@ -95,6 +134,11 @@ function dragended(d) {
   if (!d3.event.active) simulation.alphaTarget(0);
   d.fx = null;
   d.fy = null;
+}
+
+//Zoom functions 
+function zoom_actions(){
+    g.attr("transform", d3.event.transform)
 }
 
 </script>
